auth: google, facebook, email password

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -5,5 +5,5 @@
   "income": "Income",
   "outcome": "Outcome",
   "transactions": "Transactions",
-  "viewAll": "View All",
+  "viewAll": "View All"
 }
