--- a/lib/l10n/app_vi.arb
+++ b/lib/l10n/app_vi.arb
@@ -5,5 +5,5 @@
   "income": "Thu nhập",
   "outcome": "Chi tiêu",
   "transactions": "Giao dịch",
-  "viewAll": "Xem tất cả",
+  "viewAll": "Xem tất cả"
 }
